Fix wrong height of profile picture

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -175,6 +175,7 @@ div.clickable:hover{
 
     .user-info img {
         width: 1.1em;
+        height: 1.1em;
         border-radius: .7em;
         margin-right: .1em;
     }
